[gd_scene load_steps=14 format=2]

[ext_resource path="res://baj/hand.gd" type="Script" id=1]
[ext_resource path="res://baj/body.gd" type="Script" id=2]
[ext_resource path="res://sprites/b-body.png" type="Texture" id=3]
[ext_resource path="res://baj/baj.gd" type="Script" id=4]
[ext_resource path="res://baj/fingers.gd" type="Script" id=5]
[ext_resource path="res://sprites/punch.png" type="Texture" id=6]
[ext_resource path="res://sprites/grip.png" type="Texture" id=7]
[ext_resource path="res://sprites/grab.png" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 41.0187

[sub_resource type="CircleShape2D" id=3]
radius = 16.6596

[sub_resource type="CircleShape2D" id=4]
radius = 9.58892

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "grab",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "grab_grip",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "punch",
"speed": 0.0
} ]

[node name="baj" type="Node2D"]
script = ExtResource( 4 )

[node name="body" type="RigidBody2D" parent="."]
collision_mask = 5
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 9.0
contacts_reported = 1
contact_monitor = true
applied_force = Vector2( 0, -50 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 0.406, 0.406 )
texture = ExtResource( 3 )

[node name="RedSprite" type="Sprite" parent="body"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.405927, 0.405927 )
texture = ExtResource( 3 )

[node name="TargetTimer" type="Timer" parent="body"]
wait_time = 0.1
autostart = true

[node name="g" type="Node2D" parent="body"]

[node name="name" type="Label" parent="body/g"]
margin_left = -50.6811
margin_top = -74.777
margin_right = 17.3189
margin_bottom = -60.777
rect_scale = Vector2( 1.48, 1.48 )
text = "defaultfrog #7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hand" type="RigidBody2D" parent="."]
position = Vector2( 98, 0 )
collision_layer = 2
collision_mask = 7
mass = 20.0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand"]
position = Vector2( 0.237129, 0 )
shape = SubResource( 3 )

[node name="fingers" type="Area2D" parent="hand"]
gravity = 0.0
collision_layer = 8
collision_mask = 15
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand/fingers"]
shape = SubResource( 4 )

[node name="g" type="Node2D" parent="hand"]

[node name="Sprite" type="AnimatedSprite" parent="hand/g"]
position = Vector2( 0.234253, -0.866993 )
scale = Vector2( 0.0850721, 0.0850721 )
frames = SubResource( 5 )
animation = "grab_grip"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
[connection signal="body_entered" from="body" to="." method="_on_body_body_entered"]
[connection signal="timeout" from="body/TargetTimer" to="." method="_on_TargetTimer_timeout"]
[connection signal="body_entered" from="hand/fingers" to="." method="_on_fingers_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
